--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.textifly.quickmudra">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,7 +9,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,34 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".Activity.UploadDocumentActivity"
+            android:exported="true" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity
+            android:name=".Activity.EmploymentDetailsActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".Activity.PersonalDetailsActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Activity.DetailsListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.ApplyActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.RegistrationActivity"
+            android:exported="true" />
         <activity
             android:name=".Activity.OtpValidationActivity"
             android:exported="true" />
@@ -29,11 +59,14 @@
         <activity
             android:name=".Activity.OnBoardScreenActivity"
             android:exported="true">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".MainActivity"
