--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,13 @@ dependencies {
     implementation 'com.github.joielechong:countrycodepicker:2.4.2'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.0.0'
 
+
+    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //circular progress bar
+    implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+    implementation "com.airbnb.android:lottie:3.7.0"
+
 }
