--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
+            android:name=".Activity.DrivingLisenceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.PassportActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.VoterActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.AadharActivity"
+            android:exported="true" />
+        <activity
             android:name=".Activity.VideoActivity"
             android:exported="true" />
         <activity
@@ -48,11 +60,13 @@
             android:name=".Activity.SplashScreenActivity"
             android:exported="true">
 
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".Activity.WhatsAppVerificationActivity"
@@ -93,11 +107,11 @@
         <activity
             android:name=".Activity.DetailsListActivity"
             android:exported="true">
-            <!--<intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
         </activity>
         <activity
             android:name=".Activity.ApplyActivity"
@@ -118,23 +132,25 @@
             android:name=".Activity.OnBoardScreenActivity"
             android:exported="true">
 
-            <!--<intent-filter>
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
 
-<!--
+            <!--
         <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
--->
+            -->
         </activity>
     </application>
 
