--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,17 @@ dependencies {
     //circular progress bar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
 
+    //Fast Network
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+
+    //image Picker
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
+
+
+    // retrofit library
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation "com.airbnb.android:lottie:3.7.0"
 
 }
