--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ buildscript {
             mavenCentral()
             jcenter()
             maven { url "https://jitpack.io" }
+            maven { url 'https://maven.google.com' }
         }
     }
 
