--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.1"
@@ -15,7 +16,6 @@ buildscript {
     allprojects {
         repositories {
             google()
-            mavenCentral()
             jcenter()
             maven { url "https://jitpack.io" }
             maven { url 'https://maven.google.com' }
