--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,8 +64,11 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     //circular progress bar
     implementation 'com.mikhaellopez:circularprogressbar:3.1.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //Fast Network
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
